--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 .idea/**/libraries
 
 .idea/
+frontend/node_modules/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
